fixed overlapping elements

--- a/style.css
+++ b/style.css
@@ -52,6 +52,10 @@ footer {
   text-align: left;
 }
 
+.labels {
+  transform: scale(1.035);
+}
+
 .axis {
   stroke: gray;
 }
